fix some bugs & starting for media queries on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,4 @@
-
-
+@import 'Queries.css';
 body, html {
   margin: 0;
   padding: 0;
@@ -11,8 +10,10 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: nowrap;
   width: 100%;
-  min-height: 100vh;
+  height: 100dvh;
+  /* min-height: 100dvh; */
   background-image: linear-gradient(
     45deg,
     rgba(0, 201, 255, 1) 0%,
@@ -24,7 +25,7 @@ body, html {
   max-width: 500px;
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 10px;
-  margin: 0 auto 30px;
+  margin: 0 auto;
   padding: 40px 20px 70px;
   box-shadow: 0 3px 15px #5d5d5d83;
 }
@@ -70,8 +71,13 @@ body, html {
   border-radius: inherit;
   cursor: pointer;
 }
+#todo-list{
+  max-width: 400px;
+}
 ul li {
   position: relative;
+  display: flex;
+  align-items: center;
   list-style: none;
   font-size: 1em;
   padding: 12px 8px 12px 50px;
@@ -81,14 +87,15 @@ ul li {
 ul li::before {
   content: "";
   position: absolute;
+  top: 7px;
+  left: 10px;
   width: 28px;
   height: 28px;
   border-radius: 50%;
   background-image: url(../assets/img/unchecked.png);
   background-size: cover;
   background-position: center;
-  top: 10px;
-  left: 10px;
+  
 }
 ul .checked{
     color: #555;
@@ -99,7 +106,7 @@ ul .checked::before{
 }
 ul li span{
     position: absolute;
-    top: 12px;
+    top: 3px;
     right: 0;
     width: 40px;
     height: 40px;
